--- a/src/test/resources/testData/configuration.properties
+++ b/src/test/resources/testData/configuration.properties
@@ -8,3 +8,6 @@ password=A123456
 phone=123456789
 addressLine1=123
 addressLine2=3656 N Overhill ave Chicago 60634
+signUpEmail=brogrammersteamwork@gmail.com
+signUpPassword=brogrammers2018
+signUpFirstName=Brogrammer
