ulan requirment are done

--- a/src/test/resources/testData/configuration.properties
+++ b/src/test/resources/testData/configuration.properties
@@ -19,3 +19,4 @@ signUpRegPositiveEmail=5501brogrj3ammersteamwork@gmail.com
 tellUsAboutYourself=I would like to test this web page
 yearOfBirth=2018
 wrongPassword=ABC123
+wrongEmail=arifchicago@gmail.com
