updated by Kana

--- a/src/test/resources/testData/configuration.properties
+++ b/src/test/resources/testData/configuration.properties
@@ -20,3 +20,4 @@ tellUsAboutYourself=I would like to test this web page
 yearOfBirth=2018
 wrongPassword=ABC123
 wrongEmail=arifchicago@gmail.com
+lessCharPassword=1234
