--- a/src/test/resources/testData/configuration.properties
+++ b/src/test/resources/testData/configuration.properties
@@ -21,3 +21,11 @@ yearOfBirth=2018
 wrongPassword=ABC123
 wrongEmail=arifchicago@gmail.com
 lessCharPassword=1234
+city=Los Angeles
+urlCity=https://4stay.com/advanced_search?lat=34.0522342&long=-118.2436849&place_title=Los%20Angeles,%20CA,%20USA&move_in=2018-03-27&move_out=2018-09-26&number_of_beds=1
+titleCity=Advanced searchLos Angeles, CA, USA stays | Room rental, roommate finder, off-campus housing, homestay | 4stay
+titleChoice=Dorm room in the heart of LA | Room rental, roommate finder, off-campus housing, homestay | 4stay
+urlDashBoard=https://4stay.com/dashboard/home
+titleDashBoard=Dashboard | Room rental, roommate finder, off-campus housing, homestay | 4stay
+userName=John
+
